include/StTrgApi.h

//-----------------------------------------------------------------------------
//Initialize
//-----------------------------------------------------------------------------
HANDLE WINAPI StTrg_Open();
VOID WINAPI StTrg_Close(HANDLE hCamera);
//-----------------------------------------------------------------------------
//Camera Information
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetDllVersion(PDWORD pdwFileVersionMS, PDWORD pdwFileVersionLS, PDWORD pdwProductVersionMS, PDWORD pdwProductVersionLS);
BOOL WINAPI StTrg_GetCameraVersion(HANDLE hCamera, PWORD pwUSBVendorID, PWORD pwUSBProductID, PWORD pwFPGAVersion, PWORD pwFirmVersion);
BOOL WINAPI StTrg_GetProductNameA(HANDLE hCamera, PSTR pszProductName, DWORD dwBufferSize);
BOOL WINAPI StTrg_GetColorArray(HANDLE hCamera, PWORD pwColorArray);
BOOL WINAPI StTrg_HasFunction(HANDLE hCamera, DWORD dwCameraFunctionID, BOOL* pbHasFunction);
BOOL WINAPI StTrg_ReadUserMemory(HANDLE hCamera, PBYTE pbyteData, WORD wOffset, WORD wLength);
BOOL WINAPI StTrg_WriteUserMemory(HANDLE hCamera, PBYTE pbyteData, WORD wOffset, WORD wLength);
BOOL WINAPI StTrg_ReadCameraUserIDA(HANDLE hCamera, PDWORD pdwCameraID, PSTR pszCameraName, DWORD dwBufferSize);
BOOL WINAPI StTrg_WriteCameraUserIDA(HANDLE hCamera, DWORD dwCameraID, PCSTR pszCameraName, DWORD dwBufferSize);
BOOL WINAPI StTrg_ResetCounter(HANDLE hCamera);
BOOL WINAPI StTrg_WriteSettingFileA(HANDLE hCamera, PCSTR pszFileName);
BOOL WINAPI StTrg_ReadSettingFileA(HANDLE hCamera, PCSTR pszFileName);
BOOL WINAPI StTrg_CameraSetting(HANDLE hCamera, WORD wMode);
//-----------------------------------------------------------------------------
//Image Information
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetEnableScanMode(HANDLE hCamera, PWORD pwEnableScanMode);
BOOL WINAPI StTrg_GetMaximumImageSize(HANDLE hCamera, PDWORD pdwMaximumImageWidth, PDWORD pdwMaximumImageHeight);
BOOL WINAPI StTrg_GetScanMode(HANDLE hCamera, PWORD pwScanMode, PDWORD pdwOffsetX, PDWORD pdwOffsetY, PDWORD pdwWidth, PDWORD pdwHeight);
BOOL WINAPI StTrg_SetScanMode(HANDLE hCamera, WORD wScanMode, DWORD dwOffsetX, DWORD dwOffsetY, DWORD dwWidth, DWORD dwHeight);
BOOL WINAPI StTrg_GetEnableTransferBitsPerPixel(HANDLE hCamera, PDWORD pdwEnableTransferBitsPerPixel);
BOOL WINAPI StTrg_GetTransferBitsPerPixel(HANDLE hCamera, PDWORD pdwTransferBitsPerPixel);
BOOL WINAPI StTrg_SetTransferBitsPerPixel(HANDLE hCamera, DWORD dwTransferBitsPerPixel);
BOOL WINAPI StTrg_GetSkippingAndBinning(HANDLE hCamera, PBYTE pbyteHSkipping, PBYTE pbyteVSkipping, PBYTE pbyteHBinning, PBYTE pbyteVBinning);
BOOL WINAPI StTrg_SetSkippingAndBinning(HANDLE hCamera, BYTE byteHSkipping, BYTE byteVSkipping, BYTE byteHBinning, BYTE byteVBinning);
BOOL WINAPI StTrg_GetBinningSumMode(HANDLE hCamera, PWORD pwValue);
BOOL WINAPI StTrg_SetBinningSumMode(HANDLE hCamera, WORD wValue);
BOOL WINAPI StTrg_ConvTo8BitsImage(DWORD dwWidth, DWORD dwHeight, DWORD dwTransferBitsPerPixel, PWORD pwRaw, PBYTE pbyteRaw);
BOOL WINAPI StTrg_ConvYUVOrBGRToBGRImage(DWORD dwWidth, DWORD dwHeight, DWORD dwTransferBitsPerPixel, PBYTE pbyteYUVOrBGR, DWORD dwPixelFormat, PBYTE pbyteBGR);
//-----------------------------------------------------------------------------
//Clock
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetOutputFPS(HANDLE hCamera, PFLOAT pfFPS);
BOOL WINAPI StTrg_GetClock(HANDLE hCamera, PDWORD pdwClockMode, PDWORD pdwClock);
BOOL WINAPI StTrg_SetClock(HANDLE hCamera, DWORD dwClockMode, DWORD dwClock);
BOOL WINAPI StTrg_GetEnableClockMode(HANDLE hCamera, PDWORD pdwClockMode);
BOOL WINAPI StTrg_GetVBlankForFPS(HANDLE hCamera, PDWORD pdwVLines);
BOOL WINAPI StTrg_SetVBlankForFPS(HANDLE hCamera, DWORD dwVLines);
BOOL WINAPI StTrg_GetMaxVBlankForFPS(HANDLE hCamera, PDWORD pdwVLines);
BOOL WINAPI StTrg_GetFrameClock(HANDLE hCamera, PWORD pwTotalLine, PWORD pwTotalHClock);
//-----------------------------------------------------------------------------
//Shutter Gain Control
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_SetGain(HANDLE hCamera, WORD wGain);
BOOL WINAPI StTrg_GetGain(HANDLE hCamera, PWORD pwGain);
BOOL WINAPI StTrg_GetMaxGain(HANDLE hCamera, PWORD pwMaxGain);
BOOL WINAPI StTrg_GetGainDBFromSettingValue(HANDLE hCamera, WORD wGain, PFLOAT pfGaindB);
BOOL WINAPI StTrg_GetExposureClock(HANDLE hCamera, PDWORD pdwExposureValue);
BOOL WINAPI StTrg_SetExposureClock(HANDLE hCamera, DWORD dwExposureValue);
BOOL WINAPI StTrg_GetMaxShortExposureClock(HANDLE hCamera, PDWORD pdwMaximumExposureClock);
BOOL WINAPI StTrg_GetMaxLongExposureClock(HANDLE hCamera, PDWORD pdwMaximumExposureClock);
BOOL WINAPI StTrg_GetExposureClockFromTime(HANDLE hCamera, FLOAT fExpTime, PDWORD pdwExposureClock);
BOOL WINAPI StTrg_GetExposureTimeFromClock(HANDLE hCamera, DWORD dwExposureClock, PFLOAT pfExpTime);
BOOL WINAPI StTrg_SetDigitalGain(HANDLE hCamera, WORD wDigitalGain);
BOOL WINAPI StTrg_GetDigitalGain(HANDLE hCamera, PWORD pwDigitalGain);
BOOL WINAPI StTrg_ALC(HANDLE hCamera, WORD wCurrentBrightness, PDWORD pdwALCStatus);
BOOL WINAPI StTrg_GetAveragePixelValue(DWORD dwImageWidth, DWORD dwImageHeight, WORD wColorArray, DWORD dwTransferBitsPerPixel, PBYTE pbyteRaw, DWORD dwAOIOffsetX, DWORD dwAOIOffsetY, DWORD dwAOIWidth, DWORD dwAOIHeight, PFLOAT pfAverage);
BOOL WINAPI StTrg_SetALCMode(HANDLE hCamera, BYTE byteALCMode);
BOOL WINAPI StTrg_GetALCMode(HANDLE hCamera, PBYTE pbyteALCMode);
BOOL WINAPI StTrg_SetALCTargetLevel(HANDLE hCamera, WORD wLevel);
BOOL WINAPI StTrg_GetALCTargetLevel(HANDLE hCamera, PWORD pwLevel);
BOOL WINAPI StTrg_GetAGCMinGain(HANDLE hCamera, PWORD pwMinGain);
BOOL WINAPI StTrg_SetAGCMinGain(HANDLE hCamera, WORD wMinGain);
BOOL WINAPI StTrg_GetAGCMaxGain(HANDLE hCamera, PWORD pwMaxGain);
BOOL WINAPI StTrg_SetAGCMaxGain(HANDLE hCamera, WORD wMaxGain);
BOOL WINAPI StTrg_GetAEMinExposureClock(HANDLE hCamera, PDWORD pdwMinExposureClock);
BOOL WINAPI StTrg_SetAEMinExposureClock(HANDLE hCamera, DWORD dwMinExposureClock);
BOOL WINAPI StTrg_GetAEMaxExposureClock(HANDLE hCamera, PDWORD pdwMaxExposureClock);
BOOL WINAPI StTrg_SetAEMaxExposureClock(HANDLE hCamera, DWORD dwMaxExposureClock);
//-----------------------------------------------------------------------------
//Trigger
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetTriggerMode(HANDLE hCamera, PDWORD pdwTriggerMode);
BOOL WINAPI StTrg_SetTriggerMode(HANDLE hCamera, DWORD dwTriggerMode);
BOOL WINAPI StTrg_GetTriggerTiming(HANDLE hCamera, DWORD dwTriggerTimingType, PDWORD pdwValue);
BOOL WINAPI StTrg_SetTriggerTiming(HANDLE hCamera, DWORD dwTriggerTimingType, DWORD dwValue);
BOOL WINAPI StTrg_SoftTrigger(HANDLE hCamera);
BOOL WINAPI StTrg_SoftSubTrigger(HANDLE hCamera);
BOOL WINAPI StTrg_TriggerReadOut(HANDLE hCamera);