include/StTrgAPI.Bas

'Created Date:2013/08/09 17:05
Attribute VB_Name = "mdlStTrgAPI"
Option Explicit

'------------------------------------------------------------------------------
'Initialize
'------------------------------------------------------------------------------
Public Declare Function StTrg_Open Lib "StTrgAPI.dll" () As Long
Public Declare Sub StTrg_Close Lib "StTrgAPI.dll" (ByVal hCamera As Long)

'------------------------------------------------------------------------------
'Camera Information
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetDllVersion Lib "StTrgAPI.dll" (ByRef pdwFileVersionMS As Long, ByRef pdwFileVersionLS As Long, ByRef pdwProductVersionMS As Long, ByRef pdwProductVersionLS As Long) As Long
Public Declare Function StTrg_GetCameraVersion Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwUSBVendorID As Integer, ByRef pwUSBProductID As Integer, ByRef pwFPGAVersion As Integer, ByRef pwFirmVersion As Integer) As Long
Public Declare Function StTrg_GetProductNameA Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal pszProductName As String, ByVal dwBufferSize As Long) As Long
Public Declare Function StTrg_GetColorArray Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwColorArray As Integer) As Long
Public Declare Function StTrg_HasFunction Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwCameraFunctionID As Long, ByRef pbHasFunction As Long) As Long
Public Declare Function StTrg_ReadUserMemory Lib "StTrgAPI.dll" (ByVal hCamera As Long,  pbyteData As Byte, ByVal wOffset As Integer, ByVal wLength As Integer) As Long
Public Declare Function StTrg_WriteUserMemory Lib "StTrgAPI.dll" (ByVal hCamera As Long,  pbyteData As Byte, ByVal wOffset As Integer, ByVal wLength As Integer) As Long
Public Declare Function StTrg_ReadCameraUserIDA Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwCameraID As Long, ByVal pszCameraName As String, ByVal dwBufferSize As Long) As Long
Public Declare Function StTrg_WriteCameraUserIDA Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwCameraID As Long, ByVal pszCameraName As String, ByVal dwBufferSize As Long) As Long
Public Declare Function StTrg_ResetCounter Lib "StTrgAPI.dll" (ByVal hCamera As Long) As Long

'------------------------------------------------------------------------------
'Setting
'------------------------------------------------------------------------------
Public Declare Function StTrg_WriteSettingFileA Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal pszFileName As String) As Long
Public Declare Function StTrg_ReadSettingFileA Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal pszFileName As String) As Long
Public Declare Function StTrg_CameraSetting Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wMode As Integer) As Long

'------------------------------------------------------------------------------
'Image Information
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetEnableScanMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwEnableScanMode As Integer) As Long
Public Declare Function StTrg_GetMaximumImageSize Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwMaximumImageWidth As Long, ByRef pdwMaximumImageHeight As Long) As Long
Public Declare Function StTrg_GetScanMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwScanMode As Integer, ByRef pdwOffsetX As Long, ByRef pdwOffsetY As Long, ByRef pdwWidth As Long, ByRef pdwHeight As Long) As Long
Public Declare Function StTrg_SetScanMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wScanMode As Integer, ByVal dwOffsetX As Long, ByVal dwOffsetY As Long, ByVal dwWidth As Long, ByVal dwHeight As Long) As Long
Public Declare Function StTrg_GetEnableTransferBitsPerPixel Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwEnableTransferBitsPerPixel As Long) As Long
Public Declare Function StTrg_GetTransferBitsPerPixel Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwTransferBitsPerPixel As Long) As Long
Public Declare Function StTrg_SetTransferBitsPerPixel Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwTransferBitsPerPixel As Long) As Long
Public Declare Function StTrg_GetSkippingAndBinning Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pbyteHSkipping As Byte, ByRef pbyteVSkipping As Byte, ByRef pbyteHBinning As Byte, ByRef pbyteVBinning As Byte) As Long
Public Declare Function StTrg_SetSkippingAndBinning Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteHSkipping As Byte, ByVal byteVSkipping As Byte, ByVal byteHBinning As Byte, ByVal byteVBinning As Byte) As Long
Public Declare Function StTrg_GetBinningSumMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwValue As Integer) As Long
Public Declare Function StTrg_SetBinningSumMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wValue As Integer) As Long
Public Declare Function StTrg_ConvTo8BitsImage Lib "StTrgAPI.dll" (ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwTransferBitsPerPixel As Long,  pwRaw As Integer,  pbyteRaw As Byte) As Long
Public Declare Function StTrg_ConvYUVOrBGRToBGRImage Lib "StTrgAPI.dll" (ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwTransferBitsPerPixel As Long,  pbyteYUVOrBGR As Byte, ByVal dwPixelFormat As Long,  pbyteBGR As Byte) As Long

'------------------------------------------------------------------------------
'Clock
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetOutputFPS Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pfFPS As Single) As Long
Public Declare Function StTrg_GetClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwClockMode As Long, ByRef pdwClock As Long) As Long
Public Declare Function StTrg_SetClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwClockMode As Long, ByVal dwClock As Long) As Long
Public Declare Function StTrg_GetEnableClockMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwClockMode As Long) As Long
Public Declare Function StTrg_GetVBlankForFPS Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwVLines As Long) As Long
Public Declare Function StTrg_SetVBlankForFPS Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwVLines As Long) As Long
Public Declare Function StTrg_GetMaxVBlankForFPS Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwVLines As Long) As Long
Public Declare Function StTrg_GetFrameClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwTotalLine As Integer, ByRef pwTotalHClock As Integer) As Long

'------------------------------------------------------------------------------
'Shutter Gain Control
'------------------------------------------------------------------------------
Public Declare Function StTrg_SetGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wGain As Integer) As Long
Public Declare Function StTrg_GetGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwGain As Integer) As Long
Public Declare Function StTrg_GetMaxGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwMaxGain As Integer) As Long
Public Declare Function StTrg_GetGainDBFromSettingValue Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wGain As Integer, ByRef pfGaindB As Single) As Long
Public Declare Function StTrg_GetExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwExposureValue As Long) As Long
Public Declare Function StTrg_SetExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwExposureValue As Long) As Long
Public Declare Function StTrg_GetMaxShortExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwMaximumExposureClock As Long) As Long
Public Declare Function StTrg_GetMaxLongExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwMaximumExposureClock As Long) As Long
Public Declare Function StTrg_GetExposureClockFromTime Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal fExpTime As Single, ByRef pdwExposureClock As Long) As Long
Public Declare Function StTrg_GetExposureTimeFromClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwExposureClock As Long, ByRef pfExpTime As Single) As Long
Public Declare Function StTrg_SetDigitalGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wDigitalGain As Integer) As Long
Public Declare Function StTrg_GetDigitalGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwDigitalGain As Integer) As Long
Public Declare Function StTrg_ALC Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wCurrentBrightness As Integer, ByRef pdwALCStatus As Long) As Long
Public Declare Function StTrg_GetAveragePixelValue Lib "StTrgAPI.dll" (ByVal dwImageWidth As Long, ByVal dwImageHeight As Long, ByVal wColorArray As Integer, ByVal dwTransferBitsPerPixel As Long,  pbyteRaw As Byte, ByVal dwAOIOffsetX As Long, ByVal dwAOIOffsetY As Long, ByVal dwAOIWidth As Long, ByVal dwAOIHeight As Long,  pfAverage As Single) As Long
Public Declare Function StTrg_SetALCMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteALCMode As Byte) As Long
Public Declare Function StTrg_GetALCMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pbyteALCMode As Byte) As Long
Public Declare Function StTrg_SetALCTargetLevel Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wLevel As Integer) As Long
Public Declare Function StTrg_GetALCTargetLevel Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwLevel As Integer) As Long
Public Declare Function StTrg_GetAGCMinGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwMinGain As Integer) As Long
Public Declare Function StTrg_SetAGCMinGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wMinGain As Integer) As Long
Public Declare Function StTrg_GetAGCMaxGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwMaxGain As Integer) As Long
Public Declare Function StTrg_SetAGCMaxGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wMaxGain As Integer) As Long
Public Declare Function StTrg_GetAEMinExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwMinExposureClock As Long) As Long
Public Declare Function StTrg_SetAEMinExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwMinExposureClock As Long) As Long
Public Declare Function StTrg_GetAEMaxExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwMaxExposureClock As Long) As Long
Public Declare Function StTrg_SetAEMaxExposureClock Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwMaxExposureClock As Long) As Long

'------------------------------------------------------------------------------
'Trigger
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetTriggerMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwTriggerMode As Long) As Long
Public Declare Function StTrg_SetTriggerMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwTriggerMode As Long) As Long
Public Declare Function StTrg_GetTriggerTiming Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwTriggerTimingType As Long, ByRef pdwValue As Long) As Long
Public Declare Function StTrg_SetTriggerTiming Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwTriggerTimingType As Long, ByVal dwValue As Long) As Long
Public Declare Function StTrg_SoftTrigger Lib "StTrgAPI.dll" (ByVal hCamera As Long) As Long
Public Declare Function StTrg_SoftSubTrigger Lib "StTrgAPI.dll" (ByVal hCamera As Long) As Long
Public Declare Function StTrg_TriggerReadOut Lib "StTrgAPI.dll" (ByVal hCamera As Long) As Long
